@@ -1,3 +1,9 @@
+CR-2008-07-24-0: Bugfix:     o Fixed hedeby test components/ge/stop_and_free_resources
+                               (ge_stop_and_free_resources)
+                             o Increased timeout and enhanced error messages in
+                               produce_ambiguous_resource() in checktree_hedeby/util.tcl
+                 Review:     TB
+
 JG-2008-07-23-1: Bugfix:     Minor fixes and cleanup for 
                              system_tests/clients/qconf.
                  Review:     MD
